# jy-outline-key-points-extraction

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.toml  pyproject.toml  requirements-mac.txt  requirements.txt  result.json
app/: main.py
app/api/v1/: router.py
app/core/: config.py  constants.py  database.py  exceptions.py  logging_config.py  validators.py
app/models/: __init__.py  quality.py  syllabus.py  task.py
app/prompts/: activity_mix.py  asr_postprocess.py  bloom_v2.py  chapter.py  dagang.py  extractmd.py  lesson.py  lexicon.py  mindmap.py
app/schemas/: quality.py  request.py  response.py
app/scripts/: check_db.py  generate_embeddings-2.py  generate_embeddings.py  init_db.py
app/services/: embedding_service.py  lesson_pipeline.py  lexicon_match_service.py  llm_pipeline.py  mindmap_generator.py  mineru_service.py  pipeline.py  quality_service.py  rerank_service.py
app/services/converters/: office_to_pdf.py
app/services/db/: __init__.py  syllabus_service.py  task_service.py
app/services/models/: call_llm.py  dolphin_model.py
app/tests/: README.md  get_result.py  output.json  quality_data_smoke.py  test_client.py  test_concurrency.py  test_doubao.py  test_llm_pipeline.py  test_mindmap.py  test_quick.py
app/utils/: markdown_utils.py  processor.py  utils.py
docs/: current-sequence-and-bottlenecks.md  llm-pipeline-design.md  matching-design.md  quality-agent-blueprint.md  quality-api-contract.md
sql/: 01_create_tasks_table.sql  02_create_syllabus_tables.sql  03_create_quality_tables.sql  init_db.sh
(+15 files in other folders)
