[project]
name = "syllabus-extraction"
version = "1.0.0"
description = "教学大纲四要点核心内容提取系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "openai>=2.3.0",
    "PyMuPDF>=1.26.0",
    "python-pptx>=1.0.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.7.0",
    "jieba>=0.42.0",
    "tomli>=2.2.0",
    "aspose-words>=26.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
